--- a/animal-shelter.html
+++ b/animal-shelter.html
@@ -7,21 +7,22 @@
   <body>
     <h1>Your Everyday Average Shelter</h1>
     <div class="tamarin">
-      <img src="img/tamarin.jpg" width="300px" alt="Tamarin">
+      <img src="img/tamarin.jpg" alt="Tamarin">
       <h2>Tami the Tamarin</h2>
       <p>Tami likes to stay well groomed. Especially her mustache.</p>
     </div>
     <div class="pikachu">
-      <img src="img/pikachu.jpg" width="300px" alt="pikachu">
+      <img src="img/pikachu.jpg" alt="pikachu">
       <h2>Paul the Pikachu</h2>
       <p>Ok so not actually a pokemon but Paul likes to cosplay.</p>
+    </div>
     <div class="fred">
-      <img src="img/fred.jpg" width="300px" alt="fred">
+      <img src="img/fred.jpg" alt="fred">
       <h2>Fred the Ostrich</h2>
       <p>Not the brightest bird</p>
     </div>
     <div class="monkey">
-      <img src="img/monkey.jpg" width="300px" alt="monkey">
+      <img src="img/monkey.jpg" alt="monkey">
       <h2>Monkey Armstrong</h2>
       <p>Very talented monkey.  You'll never get a good night sleep again...</p>
     </div>
